# biblatex-library

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml
bib/: library.bib
data/: add_order.json  identifier_collection.json  identifier_collection.schema.json
latex/examples/alphabetic/: main.tex
latex/examples/amsrefs-bibtex/: main.tex
latex/examples/biblatex-spbasic/: main.tex
src/biblib/: __init__.py  add_entries.py  cli.py  config.py  exceptions.py  generate.py  json_validation.py  sort.py  sync.py  template.py  types.py  validate.py
src/biblib/normalize/: accents.py  dates.py  eprint.py  publisher.py
staging/: 2025-09-07-test.bib  2025-09-07-test.json  2025-09-07-tropical.bib  2025-09-07-tropical.json  2025-09-08-resurge.bib  2025-09-08-resurge.json
stubs/bibtexparser/: model.pyi
tests/: test_add_entries.py  test_generate.py  test_normalize_accents.py  test_normalize_dates.py  test_normalize_eprint.py  test_normalize_publisher.py  test_sort.py  test_sync.py  test_validate.py
typings/bibtexparser/: __init__.pyi  library.pyi  model.pyi
