[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biblib"
version = "0.1.0"
description = "Tools for a curated biblatex library: validate, sort, convert (CSL-JSON/BibTeX), enrich."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Yi-Jing Tseng" }]
keywords = ["biblatex", "bibtex", "CSL-JSON", "biber", "bibliography"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "bibtexparser>=2.0.0b8,<3.0.0", # v2 API
    "jsonschema>=4.22",
    "httpx>=0.27",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-cov>=4.1", "ruff>=0.5.0", "pip-tools>=7.5"]

[project.scripts]
blx = "biblib.cli:main"

[project.urls]
Homepage = "https://github.com/<your-user-or-org>/biblatex-library"
Repository = "https://github.com/<your-user-or-org>/biblatex-library"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["biblib*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
reportMissingTypeStubs = false
