[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biblib"
version = "0.1.0"
description = "Tools for a curated biblatex library: validate, sort, convert (CSL-JSON/BibTeX), enrich."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Yi-Jing Tseng" }]
keywords = ["biblatex", "bibtex", "CSL-JSON", "biber", "bibliography"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "bibtexparser>=2.0.0b8,<3.0.0", # v2 API
    "jsonschema>=4.22",
    "httpx>=0.27",
    "PyYAML>=6.0.1",
    "msgspec>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=4.1",
    "ruff>=0.5.0",
    "pip-tools>=7.5",
    "check-jsonschema>=0.33,<0.34",
    "pre-commit>=4.0.0",
    "pyright>=1.1.400",
]

[project.scripts]
blx = "biblib.cli:main"

[project.urls]
Homepage = "https://github.com/KiringYJ/biblatex-library"
Repository = "https://github.com/KiringYJ/biblatex-library"

[tool.hatch.build.targets.wheel]
packages = ["src/biblib"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: marks tests as integration tests (require external dependencies like biber)",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "check-jsonschema>=0.33.3",
    "pip-tools>=7.5.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.12",
]
